Specify fixed height for book list container Align loading message vertically

--- a/mercantile/static/mercantile/css/base.css
+++ b/mercantile/static/mercantile/css/base.css
@@ -22,7 +22,7 @@ p, h4, h5, h6 {
     }
 
     h4 {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     h5 {
@@ -53,12 +53,16 @@ input {
     color: var(--color-contrast);
 }
 
-.book-results {
+.book-list {
     height: 210px;
 }
 
 .book-card {
     border-width: 2px;
+}
+
+.book-details {
+    height: 190px;
 }
 
 .book-card h5 {
